--- a/server/views/finalChecks/onRemand.pug
+++ b/server/views/finalChecks/onRemand.pug
@@ -1,35 +1,15 @@
-extends ../layout
-include ../includes/errorBannerWithDetail
+extends ../formTemplates/formTemplate
 
-block content
+block question
+    | Is the offender currently on remand for another offence?
 
+block formItems
     - var onRemandValue = data.decision || null;
 
-    div.pure-g.pure-u-1
-        include ../includes/back
-        +errorBannerWithDetail(errorObject, [{field: 'decision'}])
-        include ../includes/personalDetailsSummary
-
-        div.pure-u-1-2
-            h2.heading-large Is the offender currently on remand for another offence?
-
-    if errorObject.decision
-        p.block.error-message #{errorObject.decision}
-    form(method="post")
-        input(type="hidden" name="_csrf" value=csrfToken)
-        input(type="hidden" name="bookingId" value=bookingId || '')
-        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
-
-            div.largePaddingBottom
-                div.form-group.inline
-                    div.multiple-choice
-                        input#onRemandYes(type="radio" checked=onRemandValue === 'Yes'  name="decision" value="Yes")
-                        label(for="onRemandYes") Yes
-                    div.multiple-choice
-                        input#onRemandNo(type="radio" checked=onRemandValue === 'No' name="decision" value="No")
-                        label(for="onRemandNo") No
-
-            div.paddingBottom.smallPaddingTop
-                div.pure-u-1.inlineButtons
-                    input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
-                    a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + bookingId role="button") Return to tasklist
+    div.form-group.inline
+        div.multiple-choice
+            input#onRemandYes(type="radio" checked=onRemandValue === 'Yes'  name="decision" value="Yes")
+            label(for="onRemandYes") Yes
+        div.multiple-choice
+            input#onRemandNo(type="radio" checked=onRemandValue === 'No' name="decision" value="No")
+            label(for="onRemandNo") No
