--- a/server/views/finalChecks/seriousOffence.pug
+++ b/server/views/finalChecks/seriousOffence.pug
@@ -1,34 +1,15 @@
-extends ../layout
-include ../includes/errorBannerWithDetail
+extends ../formTemplates/formTemplate
 
-block content
+block question
+    | Has the offender committed an offence in prison which was referred to the police or independent adjudicator and is not resolved?
 
+block formItems
     - var seriousOffenceValue = data.decision || null;
 
-    div.pure-g.pure-u-1
-        include ../includes/backToCheckList
-        +errorBannerWithDetail(errorObject, [{field: 'decision'}])
-        include ../includes/personalDetailsSummary
-
-        div.pure-u-2-3
-            h2.heading-large Has the offender committed an offence in prison which was referred to the police or independent adjudicator and is not resolved?
-
-    if errorObject.decision
-        p.block.error-message #{errorObject.decision}
-    form(method="post")
-        input(type="hidden" name="_csrf" value=csrfToken)
-        input(type="hidden" name="bookingId" value=bookingId || '')
-        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
-
-            div.largePaddingBottom
-                div.form-group.inline
-                    div.multiple-choice
-                        input#seriousOffenceYes(type="radio" checked=seriousOffenceValue === 'Yes'  name="decision" value="Yes")
-                        label(for="seriousOffenceYes") Yes
-                    div.multiple-choice
-                        input#seriousOffenceNo(type="radio" checked=seriousOffenceValue === 'No' name="decision" value="No")
-                        label(for="seriousOffenceNo") No
-
-            div.paddingBottom.smallPaddingTop
-                div.pure-u-1.inlineButtons
-                    input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
+    div.form-group.inline
+        div.multiple-choice
+            input#seriousOffenceYes(type="radio" checked=seriousOffenceValue === 'Yes'  name="decision" value="Yes")
+            label(for="seriousOffenceYes") Yes
+        div.multiple-choice
+            input#seriousOffenceNo(type="radio" checked=seriousOffenceValue === 'No' name="decision" value="No")
+            label(for="seriousOffenceNo") No
