--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -23,7 +23,7 @@ block content
             h2.heading-large Proposed address
 
             if address
-                div.pure-u-1-2.midPaddingBottom
+                div.pure-u-1.pure-u-1-2.midPaddingBottom
                     The following address has been requested by the offender and checked by the RO.
 
                 +addressDetail('curfew', address, review, addressSafety)
