--- a/server/views/review/includes/addressActions.pug
+++ b/server/views/review/includes/addressActions.pug
@@ -2,7 +2,7 @@ div
     h3.heading-small Actions
     if !addressWithdrawn && !consentWithdrawn
         div.pure-g
-            div.pure-u-md-1-2
+            div.pure-u-1.pure-u-md-1-2
                 p Homeowner/landlord consent withdrawn
                 div
                     form(method="post", name="withdrawConsent", action="/hdc/curfew/withdrawConsent/" + bookingId)
@@ -10,7 +10,7 @@ div
                         input(type="hidden" name="consentWithdrawn" value="Yes")
                         button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw consent
 
-            div.pure-u-md-1-2
+            div.pure-u-1.pure-u-md-1-2
                 p Offender has requested to withdraw address
                 div
                     form(method="post", name="withdrawAddress", action="/hdc/curfew/withdrawAddress/"+bookingId)
@@ -22,11 +22,11 @@ div
     else
         div.pure-g
             if !['DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(licenceStatus.stage)
-                div.pure-u-md-1-2
+                di.pure-u-1.pure-u-md-1-2
                     p Enter a new curfew address for review
                     a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/" + bookingId) Add a new address
 
-            div.pure-u-md-1-2
+            div.pure-u-1.pure-u-md-1-2
                 p Reinstate this address
                 div
                     form(method="post", name="reinstateAddress", action="/hdc/curfew/reinstateAddress/" + bookingId)
