--- a/server/views/send/caToDm.pug
+++ b/server/views/send/caToDm.pug
@@ -8,7 +8,7 @@ block content
             include ../includes/personalDetailsSummary
 
     div.pure-g.largePaddingBottom
-        div.pure-u-2-3
+        div.pure-u-1.pure-u-2-3
             h2.heading-large.midPaddingBottom Submit for approval
             p.lede The licence is ready to be submitted for approval by the decision maker or you can return to the task list and submit it later.
 
