account for ca refusal in approval decision. Display orange box on tasklist

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -14,6 +14,9 @@ block content
         else if licenceStatus.decisions.unsuitableResult
             div.error-banner.marginTopMedium
                 strong.bold The offender is presumed unsuitable for HDC release
+        else if licenceStatus.decisions.refused
+            div.error-banner.marginTopMedium
+                strong.bold Home detention curfew refused - #{licenceStatus.decisions.refusalReason}
 
     if !user.role
         p Error
