--- a/server/views/taskList/tasks/HDCRefusalTask.pug
+++ b/server/views/taskList/tasks/HDCRefusalTask.pug
@@ -1,5 +1,5 @@
 div.pure-g
-    div.pure-u-1.pure-u-md-3-4
+    div.pure-u-1.pure-u-md-3-4.paddingTop
         if licenceStatus.decisions.refused
             span.alert.bold HDC refused
 
