removed case sensitivty of usernames. redirect to referrer on login

--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -9,7 +9,7 @@ block content
     div.pure-g
         div.pure-u-1.pure-u-md-1-3
 
-            form(action='/login', method='POST', class='form')
+            form(method='POST', class='form')
                 input(type="hidden" name="_csrf" value=csrfToken)
                 h1(class='form-title heading-large') Sign in
                 .form-group
