--- a/server/views/admin/users/usersTable.pug
+++ b/server/views/admin/users/usersTable.pug
@@ -3,8 +3,8 @@ table#hdcEligiblePrisoners.largeMarginBottom
         tr
             th Nomis ID
             th Delius ID
-            th First
-            th Last
+            th First Name
+            th Last Name
             th
             th
     tbody
