--- a/server/views/admin/users/add.pug
+++ b/server/views/admin/users/add.pug
@@ -24,16 +24,36 @@ block content
                             input#nomisId.form-control(name="nomisId" type="text")
 
                         div.form-group
-                            label.form-label(for="deliusId") Delius ID
-                            input#deliusId.form-control(name="deliusId" type="text")
-
-                        div.form-group
                             label.form-label(for="first") First name
                             input#first.form-control(name="first" type="text")
 
                         div.form-group
+                            label.form-label(for="organisation") Organisation
+                            input#organisation.form-control(name="organisation" type="text")
+
+                        div.form-group
+                            label.form-label(for="email") Email
+                            input#email.form-control(name="email" type="text")
+
+            div.pure-u-1.pure-u-md-2-5
+                div.pure-g.largeMarginBottom.midPaddingBottom
+                    div.pure-u-1.pure-u-md-4-5
+
+                        div.form-group
+                            label.form-label(for="deliusId") Delius ID
+                            input#deliusId.form-control(name="deliusId" type="text")
+
+                        div.form-group
                             label.form-label(for="last") Last name
                             input#last.form-control(name="last" type="text")
+
+                        div.form-group
+                            label.form-label(for="jobRole") Job Role
+                            input#jobRole.form-control(name="jobRole" type="text")
+
+                        div.form-group
+                            label.form-label(for="telephone") Telephone
+                            input#telephone.form-control(name="telephone" type="text")
 
 
         div.paddingBottom.smallPaddingTop
