--- a/server/views/search/includes/offenderSearchForm.pug
+++ b/server/views/search/includes/offenderSearchForm.pug
@@ -5,9 +5,9 @@ div.pure-u-1.searchForm
 
         div.midPaddingBottom.padLeftRight15.paddingTop
             div.form-group.inline
-                div.pure-u-2-5
-                    label.form-label(for="searchTerm") Offender prison numbers
-                div.pure-u-3-5
+                div.pure-u-4-5
+                    label.form-label(for="searchTerm") Enter the offender's prison number. (You can search for more than one offender at the same time - you must leave a space or put a comma between each number.)
+                div.pure-u-1-5
                 div.pure-u-2-5
                     input.form-control(id="searchTerm" type="text" name="searchTerm")
                 div.pure-u-1-5.padLeft15
