--- a/server/views/admin/users/add.pug
+++ b/server/views/admin/users/add.pug
@@ -6,7 +6,8 @@ block content
     div.back-link-container.smallPaddingTop
             a#backBtn.link-back(href="/admin/") Back
     +errorBannerWithDetail(errors, [
-        {field: 'nomisId'}
+        {field: 'newNomisId'},
+        {field: 'newDeliusId'}
     ])
 
     h2.heading-large Add RO user
@@ -20,8 +21,8 @@ block content
                 div.pure-g.largeMarginBottom.midPaddingBottom
                     div.pure-u-1.pure-u-md-4-5
                         div.form-group
-                            label.form-label(for="nomisId") Nomis ID
-                            input#nomisId.form-control(name="nomisId" type="text")
+                            label.form-label(for="newNomisId") Nomis ID
+                            input#newNomisId.form-control(name="newNomisId" type="text")
 
                         div.form-group
                             label.form-label(for="first") First name
@@ -40,8 +41,8 @@ block content
                     div.pure-u-1.pure-u-md-4-5
 
                         div.form-group
-                            label.form-label(for="deliusId") Delius ID
-                            input#deliusId.form-control(name="deliusId" type="text")
+                            label.form-label(for="newDeliusId") Delius ID
+                            input#newDeliusId.form-control(name="newDeliusId" type="text")
 
                         div.form-group
                             label.form-label(for="last") Last name
