--- a/server/views/pdf/tasks/reportingTask.pug
+++ b/server/views/pdf/tasks/reportingTask.pug
@@ -2,16 +2,16 @@
 - var incomplete = incompleteGroups && incompleteGroups.includes('reporting')
 - var buttonState = incomplete ? 'UNSTARTED' : 'DONE'
 
-div.taskListItem.borderBottomLight.largeMarginBottom
+div.paddingBottom
     h2.heading-medium Reporting dates
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1.pure-u-md-3-4
             if incomplete
                 | Not complete
             else
                 | Complete
-        div.pure-u-1-4.center
+        div.pure-u-1.pure-u-md-1-4.center
             +startContinueView(buttonState, "/hdc/reporting/reportingDate/" + templateName + "/" + prisoner.bookingId)
 
 
