get caselist tab on tasklist and link back to appropriate tab

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -6,7 +6,7 @@ include ./includes/utils
 block content
 
     div.back-link-container
-        a.link-back(href="/") Back to case list
+        a.link-back(href="/caselist/" + caseListTab) Back to case list
 
         if licenceStatus.decisions.excluded
             div.error-banner.marginTopMedium
