--- a/server/views/pdf/tasks/reportingTask.pug
+++ b/server/views/pdf/tasks/reportingTask.pug
@@ -6,7 +6,7 @@ div.paddingBottom
     h2.heading-medium Reporting dates
 
     div.pure-g
-        div.pure-u-1.pure-u-md-3-4
+        div.pure-u-1.pure-u-md-3-4#reportingTaskStatus
             if incomplete
                 | Not complete
             else
