--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -21,18 +21,19 @@ block content
             div.pure-u-1.pure-u-md-1-2
                 h2#curfewAddressDetails.heading-medium Proposed curfew address
             div.pure-u-1.pure-u-md-1-2.alignRight
-                div.pure-u-md-1-2.change-details
+                div.change-details
                     if (stage === 'PROCESSING_RO' && user.role === 'RO')
                         a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + bookingId) Change these details
                     if(user.role === 'CA' && (stage === 'ELIGIBILITY' || addressChanged))
                         a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/" + bookingId) Change these details
 
-        if typeof errorObject.proposedAddress === 'string'
-            p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
-        else if errorObject.proposedAddress && typeof errorObject.proposedAddress.curfewAddress === 'string'
-            p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress.curfewAddress}
-        else
-            include ./includes/curfewAddress
+            div.pure-u-1
+                if typeof errorObject.proposedAddress === 'string'
+                    p.alert.bold(id='proposed-address-error') Enter a curfew address
+                else if errorObject.proposedAddress && typeof errorObject.proposedAddress.curfewAddress === 'string'
+                    p.alert.bold(id='proposed-address-error') Enter a curfew address
+                else
+                    include ./includes/curfewAddress
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
