--- a/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
@@ -3,13 +3,19 @@ div.largeMarginBottom
     h2.heading-medium Submit to responsible officer
 
     div.pure-g
-        div.pure-u-1.pure-u-md-3-4
-            if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress)
-                | Ready to submit
-            else
-                | Submission unavailable - Tasks not yet complete
 
-        div.pure-u-1.pure-u-md-1-4.center
-            if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress)
-                a#continueBtn.taskListAction.center.button(href='/hdc/review/curfewAddress/' + prisonerInfo.bookingId)
-                    | Continue
+        if licenceStatus.decisions.optedOut
+            div.pure-u-1.pure-u-md-3-4
+                | Submission unavailable - Offender has opted out of HDC
+
+        else
+            div.pure-u-1.pure-u-md-3-4
+                if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress)
+                    | Ready to submit
+                else
+                    | Submission unavailable - Tasks not yet complete
+
+            div.pure-u-1.pure-u-md-1-4.center
+                if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress) && !licenceStatus.decisions.optedOut
+                    a#continueBtn.taskListAction.center.button(href='/hdc/review/curfewAddress/' + prisonerInfo.bookingId)
+                        | Continue
